--- a/sty.css
+++ b/sty.css
@@ -2,7 +2,7 @@ body {
   background: #1EA6FE;
   font-family: "Roboto", serif;
   font-size: 15px;
-  line-height: 1.4;
+  /* line-height: 1.4; */
 }
 a {
   text-decoration: none;
@@ -13,9 +13,10 @@ em {
 
 .resume-wrapper {
   background: #fff;
-  max-width: 950px;
-  margin: 5em auto 2em;
-  box-shadow: 0 20px 40px rgba(50, 50, 93, 0.5), 0 10px 20px rgba(0, 0, 0, 0.2);
+  /* max-width: 950px; */
+  max-height: inherit;
+  margin: auto auto auto;
+  /* box-shadow: 0 20px 40px rgba(50, 50, 93, 0.5), 0 10px 20px rgba(0, 0, 0, 0.2); */
   border-radius: 6px;
   overflow: hidden;
 }
@@ -29,7 +30,7 @@ h1 {
 }
 
 h2 {
-  margin: 5px 0;
+  margin: 2px 0;
   font: 700 18px "Roboto", sans-serif;
   color: #999;
   text-transform: uppercase;
@@ -39,10 +40,10 @@ h2 {
 h3 {
   font: 700 16px "Roboto", sans-serif;
   text-transform: uppercase;
-  margin: 0px 0 4px;
+  margin: 0px 0 2px;
   letter-spacing: -0.5px;
   + p {
-    margin: 4px 0;
+    margin: 2px 0;
   }
   small {
     font-weight: 400;
@@ -52,7 +53,7 @@ h3 {
 }
 
 section {
-  padding: 20px 25px;
+  padding: 2px 5px;
   /*border-bottom: 1px solid #ddd;*/
 }
 
@@ -76,7 +77,7 @@ section {
 
 .timeline {
   position: relative;
-  margin-top: 20px;
+  margin-top: 10px;
   .line {
     position: absolute;
     background: #000;
@@ -93,7 +94,7 @@ section {
 .timeline-item {
   padding: 0px 15px 0px 30px;
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   &:before {
     content: "";
     position: absolute;
@@ -109,14 +110,14 @@ section {
     margin-bottom: 0;
   }
   ul {
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
 }
 
 ul {
-  list-style-type: none;
+  list-style-type: circle;
   li {
-    padding: 2px 0 0 20px;
+    padding: 2px 0 0 3px;
     position: relative;
     &:before {
       content: "\2014";
@@ -183,4 +184,8 @@ footer {
       font-size: 20px;
     }
   }
+}
+h4,h5 {
+  margin: 0px !important;
+  padding: 0px !important;
 }
